W0079: breadcrumbs on mobile Small fixes for editor

--- a/wp-content/themes/eaurouge/styles/_responsive.scss
+++ b/wp-content/themes/eaurouge/styles/_responsive.scss
@@ -383,6 +383,17 @@
   }
   /*endregion HERO*/
 
+  /*region BREADCRUMBS*/
+  .breadcrumbs {
+    > .content-wrapper {
+      padding: 5px $baseMarginMobile;
+      background-color: $turqoise;
+      color: $blue;
+      border-bottom: 0px;
+    }
+  }
+  /*endregion BREADCRUMBS*/
+
   /*region REVIEWS*/
   .reviews {
     > .content-wrapper {
